# BattleOfHearts

./: CMakeLists.txt  README.md  helper.cpp  helper.hpp  writer.cpp
lib/tiny-process/: process.cpp  process.hpp  process_unix.cpp  process_win.cpp
src/: BattleOfHearts.cpp  childprocess.hpp  helper.cpp  helper.hpp  reader.cpp  writer.cpp
